Fix location selector style on small devices

--- a/src/assets/scss/_megamenu.scss
+++ b/src/assets/scss/_megamenu.scss
@@ -333,7 +333,7 @@
           background: $ebony-clay url("../img/arrow-67-white.png") no-repeat 90% 50%;
           background-size: 10px;
           padding-right: 30px;
-          text-transform: capitalize;
+          text-transform: uppercase;
         }
       }
     }
